--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js",
-    "lint-staged:ts": "tslint"
+    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx "
   },
   "husky": {
     "hooks": {
@@ -19,14 +18,13 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "tslint --fix",
+    "**/*.less": "stylelint --syntax less",
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write",
       "git add"
     ],
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "git add"
-    ]
+    "**/*.{js,jsx}": "npm run lint-staged:js",
+    "**/*.{js,ts,tsx}": "npm run lint-staged:js"
   },
   "dependencies": {
     "antd": "^3.19.5",
@@ -49,7 +47,9 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^3.0.0",
     "lint-staged": "^7.2.2",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.7.0",
+    "stylelint": "^10.1.0",
     "tslint": "^5.12.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
