--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "babel-eslint": "^9.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
