修改文件配置

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint:fix": "tslint --fix",
+    "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
     "lint:prettier": "check-prettier lint",
     "prettier": "prettier -c --write **/*",
     "pre-commit": "lint-staged",
@@ -42,6 +43,7 @@
     "@types/react-test-renderer": "^16.0.3",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
+    "@umijs/fabric": "^1.1.7",
     "babel-eslint": "^9.0.0",
     "check-prettier": "^1.0.3",
     "cross-env": "^5.2.0",
