--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   },
   "dependencies": {
     "antd": "^3.19.5",
+    "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
