--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "name": "echi_umi_project",
   "version": "0.0.1",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
@@ -13,21 +14,24 @@
     "lint:prettier": "check-prettier lint",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier -c --write **/*",
-    "pre-commit": "lint-staged"
+    "precommit": "lint-staged"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pre-commit"
+      "pre-commit": "npm run precommit"
     }
   },
   "lint-staged": {
-    "**/*.less": "stylelint --syntax less",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+    "**/*.less": [
+      "stylelint --syntax less",
       "npm run prettier",
       "git add"
     ],
-    "**/*.{js,jsx}": "npm run lint-staged:js",
-    "**/*.{js,ts,tsx}": "npm run lint-staged:js"
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "npm run lint-staged:js",
+      "npm run prettier",
+      "git add"
+    ]
   },
   "dependencies": {
     "antd": "^3.19.5",
