--- a/package.json
+++ b/package.json
@@ -26,11 +26,7 @@
       "npm run prettier",
       "git add"
     ],
-    "**/*.less": [
-      "stylelint --syntax less",
-      "npm run prettier",
-      "git add"
-    ]
+    "**/*.less": "stylelint --syntax less --fix"
   },
   "dependencies": {
     "antd": "^3.19.5",
