修改less文件,添加格式化校验

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:no-mock": "cross-env MOCK=none umi dev",
     "build": "umi build",
     "test": "umi test",
-    "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src && npm run lint:style",
-    "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
+    "lint:fix": "npm run lint:js && npm run lint:style && npm run prettier",
+    "lint:js": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
     "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
     "lint:prettier": "check-prettier lint",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,less}'",
