新增tslint规则,修改环境变量

--- a/tslint.yml
+++ b/tslint.yml
@@ -10,3 +10,7 @@ rules:
   no-construct: true
   no-debugger: true
   no-reference: true
+  no-trailing-whitespace: false
+  jsx-no-multiline-js: false
+  jsx-alignment: false
+  jsx-no-lambda: false
